tests/programs/fail/opaque_private.vi

pub type A;

pub mod A {
  pub impl : Drop[A] = unsafe::erase;

  pub fn new() -> A {
    unsafe::eraser
  }
}

pub impl : Show[A];

pub fn main(&io: &IO) {
  let a = A::new();

  io.println("a: {a.show()}");
}
